# hh_bot

./: .dockerignore  .env.example  .env.prod  .gitignore  Dockerfile  README.md  _patch_ftl.py  _patch_ui.py  docker-compose.login-assist.example.yml  docker-compose.yml  pyproject.toml  user-context.txt
alembic/: env.py
alembic/versions/: 1983b2f8505d_add_resume_and_recommendation_letter_.py  4ae5988f2049_add_autoparse_models_and_user_settings.py  a0b1c2d3e4f5_add_interview_employer_questions.py  a1b2c3d4e5f7_add_compat_check_to_parsing_companies.py  a1b2c3d4e5f8_add_autorespond_cover_letter_to_vacancies.py  a7b8c9d0e1f2_add_new_features_tables.py  abaf35cea4cc_add_uq_user_vacancy_context.py  b1c2d3e4f5a6_add_interviews_tables.py  b3c7f1a2e894_add_last_delivered_at_to_autoparse_companies.py  c0d1e2f3a4b5_merge_feature_and_interview_heads.py  c1d2e3f4a5b6_add_vacancy_feed_sessions.py  d1e2f3a4b5c6_add_params_to_vacancy_summaries.py  d81285d05a37_add_raw_api_data_to_vacancies.py  dd5101b09d21_initial.py  df15f0a4b4f0_merge_heads.py  e5f6a7b8c9d0_add_achievements_duties_to_work_experience.py  e6864bbe0675_add_support_tickets_and_bans.py  f0a1b2c3d4e5_add_work_experience_ai_drafts.py  f6a7b8c9d0e1_add_title_period_to_work_experience.py  f9e2d1c0b7a3_add_ai_analysis_to_autoparsed_vacancies.py  fe397ee20e86_add_user_work_experiences.py  g1h2i3j4k5l6_merge_we_ai_drafts_and_title_period.py  h2i3j4k5l6m7_add_is_deleted_to_parsing_companies.py  i3j4k5l6m7n8_add_hh_models_and_normalized_vacancy_columns.py  j4k5l6m7n8o9_add_tasks_parse_company.py  k5l6m7n8o9p0_add_include_reacted_in_feed.py  l7m8n9o0p1q2_add_tasks_cover_letter.py  m8n9o0p1q2r3_add_company_review_questions_to_ask.py  n9o0p1q2r3s4_add_interview_notes.py  o9p0q1r2s3t4_add_tasks_interview_qa.py  p0q1r2s3t4u5_add_cover_letter_vacancies.py  q1r2s3t4u5v6_add_hh_oauth_and_application_tables.py  r4s5t6u7v8w9_add_parse_mode_to_autoparse_companies.py  u2v3w4x5y6z7_add_hh_browser_storage.py  (+7 more)
config/: redis-standalone.conf
docker/: entrypoint-app.sh  entrypoint-login-assist.sh
docs/: BEST_PRACTICES.md  DEPLOYMENT.md  HH_LOGIN_ASSIST.md  REFACTORING_RESULTS.md  applicant-negotiations.html  applicant-resumes-block.html  hhinside.md  hhpage.html  parsing_flow_diagram.md  resume-page-cookies.md  resume-page.html  test-apply-request.md  test-page.html  vacancies-list-page.html  vacancies_example.json  vacancy_example.json  vacancy_prep_query_1_20260320_2101.txt
scripts/: hh_browser_login.py  patch_hh_ui_runner.py  seed_roles.py
src/: __main__.py  config.py  oauth_app.py
tests/: conftest.py
(+376 files in other folders)
