[project]
name = "hh-bot"
version = "0.1.0"
description = "HeadHunter vacancy parser Telegram bot"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15",
    "aiohttp>=3.11",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "httpx>=0.28",
    "openai>=1.61",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "rich>=13.9",
    "beautifulsoup4>=4.12",
    "fake-useragent>=2.0",
    "python-dotenv>=1.0",
    "aiogram-i18n>=1.4",
    "fluent-runtime>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ruff>=0.9",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
