[project]
name = "hh-bot"
version = "0.1.0"
description = "HeadHunter vacancy parser Telegram bot"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.26",
    "aiohttp>=3.11",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "httpx>=0.28",
    "openai>=1.61",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "rich>=13.9",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "fluent.runtime>=0.4",
    "pypandoc>=1.13",
    "cryptography>=44.0",
    "starlette>=0.46",
    "uvicorn[standard]>=0.34",
    "playwright>=1.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-mock>=3.14",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ruff>=0.9",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
